# generated/model_auth_initiate_sso_response.go
@@ -1,126 +1,0 @@
-/*
-proto/payments/payments.proto
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: version not set
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package generated
-
-import (
-	"encoding/json"
-)
-
-// checks if the AuthInitiateSSOResponse type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &AuthInitiateSSOResponse{}
-
-// AuthInitiateSSOResponse struct for AuthInitiateSSOResponse
-type AuthInitiateSSOResponse struct {
-	AuthUrl *string `json:"authUrl,omitempty"`
-}
-
-// NewAuthInitiateSSOResponse instantiates a new AuthInitiateSSOResponse object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewAuthInitiateSSOResponse() *AuthInitiateSSOResponse {
-	this := AuthInitiateSSOResponse{}
-	return &this
-}
-
-// NewAuthInitiateSSOResponseWithDefaults instantiates a new AuthInitiateSSOResponse object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewAuthInitiateSSOResponseWithDefaults() *AuthInitiateSSOResponse {
-	this := AuthInitiateSSOResponse{}
-	return &this
-}
-
-// GetAuthUrl returns the AuthUrl field value if set, zero value otherwise.
-func (o *AuthInitiateSSOResponse) GetAuthUrl() string {
-	if o == nil || IsNil(o.AuthUrl) {
-		var ret string
-		return ret
-	}
-	return *o.AuthUrl
-}
-
-// GetAuthUrlOk returns a tuple with the AuthUrl field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *AuthInitiateSSOResponse) GetAuthUrlOk() (*string, bool) {
-	if o == nil || IsNil(o.AuthUrl) {
-		return nil, false
-	}
-	return o.AuthUrl, true
-}
-
-// HasAuthUrl returns a boolean if a field has been set.
-func (o *AuthInitiateSSOResponse) HasAuthUrl() bool {
-	if o != nil && !IsNil(o.AuthUrl) {
-		return true
-	}
-
-	return false
-}
-
-// SetAuthUrl gets a reference to the given string and assigns it to the AuthUrl field.
-func (o *AuthInitiateSSOResponse) SetAuthUrl(v string) {
-	o.AuthUrl = &v
-}
-
-func (o AuthInitiateSSOResponse) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o AuthInitiateSSOResponse) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.AuthUrl) {
-		toSerialize["authUrl"] = o.AuthUrl
-	}
-	return toSerialize, nil
-}
-
-type NullableAuthInitiateSSOResponse struct {
-	value *AuthInitiateSSOResponse
-	isSet bool
-}
-
-func (v NullableAuthInitiateSSOResponse) Get() *AuthInitiateSSOResponse {
-	return v.value
-}
-
-func (v *NullableAuthInitiateSSOResponse) Set(val *AuthInitiateSSOResponse) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableAuthInitiateSSOResponse) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableAuthInitiateSSOResponse) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableAuthInitiateSSOResponse(val *AuthInitiateSSOResponse) *NullableAuthInitiateSSOResponse {
-	return &NullableAuthInitiateSSOResponse{value: val, isSet: true}
-}
-
-func (v NullableAuthInitiateSSOResponse) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableAuthInitiateSSOResponse) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
