# generated/model_ledger_create_account_response.go
@@ -1,162 +1,0 @@
-/*
-proto/payments/payments.proto
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: version not set
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package generated
-
-import (
-	"encoding/json"
-)
-
-// checks if the LedgerCreateAccountResponse type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &LedgerCreateAccountResponse{}
-
-// LedgerCreateAccountResponse struct for LedgerCreateAccountResponse
-type LedgerCreateAccountResponse struct {
-	AccountId *string `json:"accountId,omitempty"`
-	Status *string `json:"status,omitempty"`
-}
-
-// NewLedgerCreateAccountResponse instantiates a new LedgerCreateAccountResponse object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewLedgerCreateAccountResponse() *LedgerCreateAccountResponse {
-	this := LedgerCreateAccountResponse{}
-	return &this
-}
-
-// NewLedgerCreateAccountResponseWithDefaults instantiates a new LedgerCreateAccountResponse object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewLedgerCreateAccountResponseWithDefaults() *LedgerCreateAccountResponse {
-	this := LedgerCreateAccountResponse{}
-	return &this
-}
-
-// GetAccountId returns the AccountId field value if set, zero value otherwise.
-func (o *LedgerCreateAccountResponse) GetAccountId() string {
-	if o == nil || IsNil(o.AccountId) {
-		var ret string
-		return ret
-	}
-	return *o.AccountId
-}
-
-// GetAccountIdOk returns a tuple with the AccountId field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *LedgerCreateAccountResponse) GetAccountIdOk() (*string, bool) {
-	if o == nil || IsNil(o.AccountId) {
-		return nil, false
-	}
-	return o.AccountId, true
-}
-
-// HasAccountId returns a boolean if a field has been set.
-func (o *LedgerCreateAccountResponse) HasAccountId() bool {
-	if o != nil && !IsNil(o.AccountId) {
-		return true
-	}
-
-	return false
-}
-
-// SetAccountId gets a reference to the given string and assigns it to the AccountId field.
-func (o *LedgerCreateAccountResponse) SetAccountId(v string) {
-	o.AccountId = &v
-}
-
-// GetStatus returns the Status field value if set, zero value otherwise.
-func (o *LedgerCreateAccountResponse) GetStatus() string {
-	if o == nil || IsNil(o.Status) {
-		var ret string
-		return ret
-	}
-	return *o.Status
-}
-
-// GetStatusOk returns a tuple with the Status field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *LedgerCreateAccountResponse) GetStatusOk() (*string, bool) {
-	if o == nil || IsNil(o.Status) {
-		return nil, false
-	}
-	return o.Status, true
-}
-
-// HasStatus returns a boolean if a field has been set.
-func (o *LedgerCreateAccountResponse) HasStatus() bool {
-	if o != nil && !IsNil(o.Status) {
-		return true
-	}
-
-	return false
-}
-
-// SetStatus gets a reference to the given string and assigns it to the Status field.
-func (o *LedgerCreateAccountResponse) SetStatus(v string) {
-	o.Status = &v
-}
-
-func (o LedgerCreateAccountResponse) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o LedgerCreateAccountResponse) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.AccountId) {
-		toSerialize["accountId"] = o.AccountId
-	}
-	if !IsNil(o.Status) {
-		toSerialize["status"] = o.Status
-	}
-	return toSerialize, nil
-}
-
-type NullableLedgerCreateAccountResponse struct {
-	value *LedgerCreateAccountResponse
-	isSet bool
-}
-
-func (v NullableLedgerCreateAccountResponse) Get() *LedgerCreateAccountResponse {
-	return v.value
-}
-
-func (v *NullableLedgerCreateAccountResponse) Set(val *LedgerCreateAccountResponse) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableLedgerCreateAccountResponse) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableLedgerCreateAccountResponse) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableLedgerCreateAccountResponse(val *LedgerCreateAccountResponse) *NullableLedgerCreateAccountResponse {
-	return &NullableLedgerCreateAccountResponse{value: val, isSet: true}
-}
-
-func (v NullableLedgerCreateAccountResponse) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableLedgerCreateAccountResponse) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
