# generated/model_notifications_delete_webhook_endpoint_response.go
@@ -1,126 +1,0 @@
-/*
-proto/payments/payments.proto
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: version not set
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package generated
-
-import (
-	"encoding/json"
-)
-
-// checks if the NotificationsDeleteWebhookEndpointResponse type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &NotificationsDeleteWebhookEndpointResponse{}
-
-// NotificationsDeleteWebhookEndpointResponse struct for NotificationsDeleteWebhookEndpointResponse
-type NotificationsDeleteWebhookEndpointResponse struct {
-	Success *bool `json:"success,omitempty"`
-}
-
-// NewNotificationsDeleteWebhookEndpointResponse instantiates a new NotificationsDeleteWebhookEndpointResponse object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewNotificationsDeleteWebhookEndpointResponse() *NotificationsDeleteWebhookEndpointResponse {
-	this := NotificationsDeleteWebhookEndpointResponse{}
-	return &this
-}
-
-// NewNotificationsDeleteWebhookEndpointResponseWithDefaults instantiates a new NotificationsDeleteWebhookEndpointResponse object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewNotificationsDeleteWebhookEndpointResponseWithDefaults() *NotificationsDeleteWebhookEndpointResponse {
-	this := NotificationsDeleteWebhookEndpointResponse{}
-	return &this
-}
-
-// GetSuccess returns the Success field value if set, zero value otherwise.
-func (o *NotificationsDeleteWebhookEndpointResponse) GetSuccess() bool {
-	if o == nil || IsNil(o.Success) {
-		var ret bool
-		return ret
-	}
-	return *o.Success
-}
-
-// GetSuccessOk returns a tuple with the Success field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *NotificationsDeleteWebhookEndpointResponse) GetSuccessOk() (*bool, bool) {
-	if o == nil || IsNil(o.Success) {
-		return nil, false
-	}
-	return o.Success, true
-}
-
-// HasSuccess returns a boolean if a field has been set.
-func (o *NotificationsDeleteWebhookEndpointResponse) HasSuccess() bool {
-	if o != nil && !IsNil(o.Success) {
-		return true
-	}
-
-	return false
-}
-
-// SetSuccess gets a reference to the given bool and assigns it to the Success field.
-func (o *NotificationsDeleteWebhookEndpointResponse) SetSuccess(v bool) {
-	o.Success = &v
-}
-
-func (o NotificationsDeleteWebhookEndpointResponse) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o NotificationsDeleteWebhookEndpointResponse) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Success) {
-		toSerialize["success"] = o.Success
-	}
-	return toSerialize, nil
-}
-
-type NullableNotificationsDeleteWebhookEndpointResponse struct {
-	value *NotificationsDeleteWebhookEndpointResponse
-	isSet bool
-}
-
-func (v NullableNotificationsDeleteWebhookEndpointResponse) Get() *NotificationsDeleteWebhookEndpointResponse {
-	return v.value
-}
-
-func (v *NullableNotificationsDeleteWebhookEndpointResponse) Set(val *NotificationsDeleteWebhookEndpointResponse) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableNotificationsDeleteWebhookEndpointResponse) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableNotificationsDeleteWebhookEndpointResponse) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableNotificationsDeleteWebhookEndpointResponse(val *NotificationsDeleteWebhookEndpointResponse) *NullableNotificationsDeleteWebhookEndpointResponse {
-	return &NullableNotificationsDeleteWebhookEndpointResponse{value: val, isSet: true}
-}
-
-func (v NullableNotificationsDeleteWebhookEndpointResponse) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableNotificationsDeleteWebhookEndpointResponse) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
