# generated/model_notifications_list_webhook_endpoints_response.go
@@ -1,126 +1,0 @@
-/*
-proto/payments/payments.proto
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: version not set
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package generated
-
-import (
-	"encoding/json"
-)
-
-// checks if the NotificationsListWebhookEndpointsResponse type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &NotificationsListWebhookEndpointsResponse{}
-
-// NotificationsListWebhookEndpointsResponse struct for NotificationsListWebhookEndpointsResponse
-type NotificationsListWebhookEndpointsResponse struct {
-	Endpoints []NotificationsWebhookEndpoint `json:"endpoints,omitempty"`
-}
-
-// NewNotificationsListWebhookEndpointsResponse instantiates a new NotificationsListWebhookEndpointsResponse object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewNotificationsListWebhookEndpointsResponse() *NotificationsListWebhookEndpointsResponse {
-	this := NotificationsListWebhookEndpointsResponse{}
-	return &this
-}
-
-// NewNotificationsListWebhookEndpointsResponseWithDefaults instantiates a new NotificationsListWebhookEndpointsResponse object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewNotificationsListWebhookEndpointsResponseWithDefaults() *NotificationsListWebhookEndpointsResponse {
-	this := NotificationsListWebhookEndpointsResponse{}
-	return &this
-}
-
-// GetEndpoints returns the Endpoints field value if set, zero value otherwise.
-func (o *NotificationsListWebhookEndpointsResponse) GetEndpoints() []NotificationsWebhookEndpoint {
-	if o == nil || IsNil(o.Endpoints) {
-		var ret []NotificationsWebhookEndpoint
-		return ret
-	}
-	return o.Endpoints
-}
-
-// GetEndpointsOk returns a tuple with the Endpoints field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *NotificationsListWebhookEndpointsResponse) GetEndpointsOk() ([]NotificationsWebhookEndpoint, bool) {
-	if o == nil || IsNil(o.Endpoints) {
-		return nil, false
-	}
-	return o.Endpoints, true
-}
-
-// HasEndpoints returns a boolean if a field has been set.
-func (o *NotificationsListWebhookEndpointsResponse) HasEndpoints() bool {
-	if o != nil && !IsNil(o.Endpoints) {
-		return true
-	}
-
-	return false
-}
-
-// SetEndpoints gets a reference to the given []NotificationsWebhookEndpoint and assigns it to the Endpoints field.
-func (o *NotificationsListWebhookEndpointsResponse) SetEndpoints(v []NotificationsWebhookEndpoint) {
-	o.Endpoints = v
-}
-
-func (o NotificationsListWebhookEndpointsResponse) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o NotificationsListWebhookEndpointsResponse) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Endpoints) {
-		toSerialize["endpoints"] = o.Endpoints
-	}
-	return toSerialize, nil
-}
-
-type NullableNotificationsListWebhookEndpointsResponse struct {
-	value *NotificationsListWebhookEndpointsResponse
-	isSet bool
-}
-
-func (v NullableNotificationsListWebhookEndpointsResponse) Get() *NotificationsListWebhookEndpointsResponse {
-	return v.value
-}
-
-func (v *NullableNotificationsListWebhookEndpointsResponse) Set(val *NotificationsListWebhookEndpointsResponse) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableNotificationsListWebhookEndpointsResponse) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableNotificationsListWebhookEndpointsResponse) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableNotificationsListWebhookEndpointsResponse(val *NotificationsListWebhookEndpointsResponse) *NullableNotificationsListWebhookEndpointsResponse {
-	return &NullableNotificationsListWebhookEndpointsResponse{value: val, isSet: true}
-}
-
-func (v NullableNotificationsListWebhookEndpointsResponse) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableNotificationsListWebhookEndpointsResponse) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
