# generated/model_topup_wallet_request.go
@@ -1,0 +1,215 @@
+/*
+Sapliy Fintech API
+
+Official API for the Sapliy Fintech Ecosystem. Build robust financial applications with our type-safe, high-integrity platform.
+
+API version: 1.0.0
+Contact: support@sapliy.io
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package generated
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the TopupWalletRequest type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &TopupWalletRequest{}
+
+// TopupWalletRequest struct for TopupWalletRequest
+type TopupWalletRequest struct {
+	Amount int64 `json:"amount"`
+	Currency string `json:"currency"`
+	ReferenceId string `json:"reference_id"`
+}
+
+type _TopupWalletRequest TopupWalletRequest
+
+// NewTopupWalletRequest instantiates a new TopupWalletRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewTopupWalletRequest(amount int64, currency string, referenceId string) *TopupWalletRequest {
+	this := TopupWalletRequest{}
+	this.Amount = amount
+	this.Currency = currency
+	this.ReferenceId = referenceId
+	return &this
+}
+
+// NewTopupWalletRequestWithDefaults instantiates a new TopupWalletRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewTopupWalletRequestWithDefaults() *TopupWalletRequest {
+	this := TopupWalletRequest{}
+	return &this
+}
+
+// GetAmount returns the Amount field value
+func (o *TopupWalletRequest) GetAmount() int64 {
+	if o == nil {
+		var ret int64
+		return ret
+	}
+
+	return o.Amount
+}
+
+// GetAmountOk returns a tuple with the Amount field value
+// and a boolean to check if the value has been set.
+func (o *TopupWalletRequest) GetAmountOk() (*int64, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Amount, true
+}
+
+// SetAmount sets field value
+func (o *TopupWalletRequest) SetAmount(v int64) {
+	o.Amount = v
+}
+
+// GetCurrency returns the Currency field value
+func (o *TopupWalletRequest) GetCurrency() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Currency
+}
+
+// GetCurrencyOk returns a tuple with the Currency field value
+// and a boolean to check if the value has been set.
+func (o *TopupWalletRequest) GetCurrencyOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Currency, true
+}
+
+// SetCurrency sets field value
+func (o *TopupWalletRequest) SetCurrency(v string) {
+	o.Currency = v
+}
+
+// GetReferenceId returns the ReferenceId field value
+func (o *TopupWalletRequest) GetReferenceId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.ReferenceId
+}
+
+// GetReferenceIdOk returns a tuple with the ReferenceId field value
+// and a boolean to check if the value has been set.
+func (o *TopupWalletRequest) GetReferenceIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.ReferenceId, true
+}
+
+// SetReferenceId sets field value
+func (o *TopupWalletRequest) SetReferenceId(v string) {
+	o.ReferenceId = v
+}
+
+func (o TopupWalletRequest) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o TopupWalletRequest) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["amount"] = o.Amount
+	toSerialize["currency"] = o.Currency
+	toSerialize["reference_id"] = o.ReferenceId
+	return toSerialize, nil
+}
+
+func (o *TopupWalletRequest) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"amount",
+		"currency",
+		"reference_id",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varTopupWalletRequest := _TopupWalletRequest{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varTopupWalletRequest)
+
+	if err != nil {
+		return err
+	}
+
+	*o = TopupWalletRequest(varTopupWalletRequest)
+
+	return err
+}
+
+type NullableTopupWalletRequest struct {
+	value *TopupWalletRequest
+	isSet bool
+}
+
+func (v NullableTopupWalletRequest) Get() *TopupWalletRequest {
+	return v.value
+}
+
+func (v *NullableTopupWalletRequest) Set(val *TopupWalletRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableTopupWalletRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableTopupWalletRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableTopupWalletRequest(val *TopupWalletRequest) *NullableTopupWalletRequest {
+	return &NullableTopupWalletRequest{value: val, isSet: true}
+}
+
+func (v NullableTopupWalletRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableTopupWalletRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
